--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,19 @@
     <string name="true_button">True</string>
     <string name="false_button">False</string>
 
-    <string name="question_1">Little Mamas Bakery is where Chandler and Rachel got the cheesecake from?</string>
-    <string name="question_2">Joey has nine sisters</string>
-    <string name="question_3">Ross divorced 4 times</string>
-    <string name="question_4">Phoebe carried 3 babies for her brother</string>
-    <string name="question_5">Chandler is forced to work in Tahoma after falling asleep in a meeting </string>
+    <string name="next_button">Next</string>
+    <string name="previous_button">Previous</string>
+    <string name="hint_button">Hint</string>
+
+    <string name="question_1">Little Mama\'s Bakery is where Chandler and Rachel stole cheesecake from.</string>
+    <string name="question_2">Joey has nine sisters.</string>
+    <string name="question_3">Ross divorced 4 times.</string>
+    <string name="question_4">Phoebe carried 3 babies for her brother.</string>
+    <string name="question_5">Chandler is forced to work in Tahoma after falling asleep in a meeting.</string>
+
+    <string name="question_1_hint">This bakery was in Chicago.</string>
+    <string name="question_2_hint">The number is large.</string>
+    <string name="question_3_hint">What are the names of all his ex wives?</string>
+    <string name="question_4_hint">One of the children\'s name was Chandler.</string>
+    <string name="question_5_hint">The state is Oklahoma.</string>
 </resources>
